:fire: fully responsive. NIT picked functionality on Safari, chrome and firefox. One small issue with CSS burger menu remaining.

--- a/partials/_header-footer.scss
+++ b/partials/_header-footer.scss
@@ -14,6 +14,7 @@
         align-items: center;
         @media screen and (max-width: 980px) {
             justify-content: center;
+            align-items: flex-start;
         }  
         @media screen and (max-width: 768px) {
             justify-content: center;
@@ -45,6 +46,7 @@
         @media screen and (max-width: 980px) {
             font-size: (12rem * 0.8);
             margin: 0 0 0 50px;
+            padding-top: 150px;
         }
         @media screen and (max-width: 768px) {
             display: none;
