--- a/partials/_nav.scss
+++ b/partials/_nav.scss
@@ -71,7 +71,7 @@
     &__link {
         display: block;
         padding: 30px 50px;
-        transition: all 0.3s;
+        transition: all .3s;
     }
     &__input[type="checkbox"] {
 	    display: none;  
@@ -86,7 +86,7 @@
             font-size: 3rem;
             position: relative;
             color: $black;
-            padding: 25px 50%;
+            padding: 25px 25px;
             z-index: 10;
         }
     }
